# jubilant-spork

./: CMakeLists.txt  README.md  plan.md
.github/: copilot-instructions.md
.github/skills/playwright-cli/: SKILL.md
docs/: api_reference.md
docs/specs/: adxl345_driver_spec.md  bme280_driver_spec.md  bmp280_driver_spec.md
examples/: main.cpp
include/: i2c_interface.hpp  sensor_base.hpp  spi_interface.hpp
include/drivers/: accelerometer.hpp  pressure_sensor.hpp  temperature_sensor.hpp
src/drivers/: accelerometer.cpp  pressure_sensor.cpp  temperature_sensor.cpp
tests/: test_accelerometer.cpp  test_pressure_sensor.cpp  test_temperature_sensor.cpp
